types, order-db packages, order-service MongoDB + routes + Authorization

--- a/apps/payment-service/package.json
+++ b/apps/payment-service/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^20.11.17",
+    "@repo/types": "workspace:*",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3"
   }
